# EXE3001-ECMV

./: .gitignore  LICENSE  README.md  pyproject.toml
ecmv/: __init__.py  constants.py  decorators.py  errors.py  extract.py  features.py  store.py
examples/: example_classify.py  example_dataset.py  example_test.py
