[tool.poetry]
name = "ecmv"
version = "0.2.16"
description = "Python package for the EXE3002 - Classifiers and Machine Vision written assignment"
authors = ["JWSchaefer <joe.w.schaefer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
tqdm = "^4.66.2"
numpy = "^1.26.4"
scipy = "^1.12.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
appdirs = "^1.4.4"
# ipykernel = "^6.29.3"
pip = "^24.0"
scikit-image = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
